--- a/index.html
+++ b/index.html
@@ -64,6 +64,66 @@
                     <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
                 </li>
+                <li class="p-4 bg-white rounded-lg shadow">
+                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
+                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
+                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
+                </li>
+                <li class="p-4 bg-white rounded-lg shadow">
+                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
+                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
+                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
+                </li>
+                <li class="p-4 bg-white rounded-lg shadow">
+                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
+                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
+                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
+                </li>
+                <li class="p-4 bg-white rounded-lg shadow">
+                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
+                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
+                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
+                </li>
+                <li class="p-4 bg-white rounded-lg shadow">
+                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
+                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
+                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
+                </li>
+                <li class="p-4 bg-white rounded-lg shadow">
+                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
+                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
+                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
+                </li>
+                <li class="p-4 bg-white rounded-lg shadow">
+                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
+                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
+                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
+                </li>
+                <li class="p-4 bg-white rounded-lg shadow">
+                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
+                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
+                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
+                </li>
+                <li class="p-4 bg-white rounded-lg shadow">
+                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
+                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
+                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
+                </li>
+                <li class="p-4 bg-white rounded-lg shadow">
+                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
+                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
+                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
+                </li>
                 <!-- Add more activities as needed -->
             </ul>
         </div>
