--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
             background-color: rgba(255, 255, 255, 0.8);
         }
 
-        /* Custom CSS for making the list scrollable */
-        .activity-list ul {
-            max-height: 70vh; /* Set the maximum height for the list */
-            overflow-y: auto; /* Enable vertical scrolling */
+        /* Custom CSS for right panel */
+        .activity-detail {
+            display: none;
+        }
+
+        .activity-detail.active {
+            display: block;
         }
     </style>
 </head>
@@ -37,88 +40,28 @@
 
         <!-- Header -->
         <header class="bg-indigo-600 text-white py-4 shadow-md">
-            <div class="container mx-auto flex justify-left items-center px-4">
+            <div class="container mx-auto flex justify-center items-center px-4">
                 <h1 class="text-2xl font-bold">Activity Tracker</h1>
             </div>
         </header>
 
         <!-- Activity List -->
-        <div class="activity-list fixed top-0 right-0 w-full md:w-1/3 lg:w-1/4 h-full p-6 shadow-lg">
+        <div class="activity-list fixed top-0 right-0 w-full md:w-1/3 lg:w-1/4 h-full p-6 shadow-lg overflow-y-auto">
             <h2 class="text-xl font-semibold mb-4 text-gray-900">Upcoming Activities</h2>
             <ul class="space-y-4">
-                <li class="p-4 bg-white rounded-lg shadow">
+                <li class="p-4 bg-white rounded-lg shadow cursor-pointer" onclick="showActivityDetail('Activity Title 1', 'This is the detailed information about Activity 1.')">
                     <h3 class="text-lg font-bold mb-2">Activity Title 1</h3>
                     <p class="text-sm text-gray-600 mb-2">Date: August 25, 2024</p>
                     <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="mt-2 text-sm text-gray-600">10 registered, 5 spots left</div>
                 </li>
-                <li class="p-4 bg-white rounded-lg shadow">
+                <li class="p-4 bg-white rounded-lg shadow cursor-pointer" onclick="showActivityDetail('Activity Title 2', 'This is the detailed information about Activity 2.')">
                     <h3 class="text-lg font-bold mb-2">Activity Title 2</h3>
                     <p class="text-sm text-gray-600 mb-2">Date: September 1, 2024</p>
                     <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="mt-2 text-sm text-gray-600">5 registered, 10 spots left</div>
                 </li>
-                <li class="p-4 bg-white rounded-lg shadow">
-                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
-                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
-                </li>
-                <li class="p-4 bg-white rounded-lg shadow">
-                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
-                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
-                </li>
-                <li class="p-4 bg-white rounded-lg shadow">
-                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
-                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
-                </li>
-                <li class="p-4 bg-white rounded-lg shadow">
-                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
-                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
-                </li>
-                <li class="p-4 bg-white rounded-lg shadow">
-                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
-                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
-                </li>
-                <li class="p-4 bg-white rounded-lg shadow">
-                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
-                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
-                </li>
-                <li class="p-4 bg-white rounded-lg shadow">
-                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
-                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
-                </li>
-                <li class="p-4 bg-white rounded-lg shadow">
-                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
-                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
-                </li>
-                <li class="p-4 bg-white rounded-lg shadow">
-                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
-                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
-                </li>
-                <li class="p-4 bg-white rounded-lg shadow">
-                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
-                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
-                </li>
-                <li class="p-4 bg-white rounded-lg shadow">
+                <li class="p-4 bg-white rounded-lg shadow cursor-pointer" onclick="showActivityDetail('Activity Title 3', 'This is the detailed information about Activity 3.')">
                     <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
                     <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
                     <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -126,6 +69,13 @@
                 </li>
                 <!-- Add more activities as needed -->
             </ul>
+        </div>
+
+        <!-- Activity Detail Panel -->
+        <div id="activityDetailPanel" class="activity-detail fixed top-0 right-0 w-full md:w-2/3 lg:w-3/4 h-full p-6 bg-white shadow-lg overflow-y-auto">
+            <h2 id="activityTitle" class="text-2xl font-bold mb-4 text-gray-900">Activity Title</h2>
+            <p id="activityDescription" class="text-gray-700">Activity description goes here.</p>
+            <button onclick="hideActivityDetail()" class="mt-6 px-4 py-2 text-white bg-red-600 rounded hover:bg-red-700 focus:outline-none">Close</button>
         </div>
 
         <!-- Footer -->
@@ -136,6 +86,37 @@
         </footer>
 
     </div>
+
+    <!-- Modal for Mobile View -->
+    <div id="activityModal" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50 hidden">
+        <div class="bg-white p-6 rounded-lg shadow-lg max-w-sm w-full">
+            <h2 id="modalActivityTitle" class="text-2xl font-bold mb-4 text-gray-900">Activity Title</h2>
+            <p id="modalActivityDescription" class="text-gray-700">Activity description goes here.</p>
+            <button onclick="hideActivityDetail()" class="mt-6 px-4 py-2 text-white bg-red-600 rounded hover:bg-red-700 focus:outline-none">Close</button>
+        </div>
+    </div>
+
+    <script>
+        function showActivityDetail(title, description) {
+            // For desktop view
+            if (window.innerWidth >= 768) {
+                document.getElementById('activityTitle').innerText = title;
+                document.getElementById('activityDescription').innerText = description;
+                document.getElementById('activityDetailPanel').classList.add('active');
+            } else {
+                // For mobile view
+                document.getElementById('modalActivityTitle').innerText = title;
+                document.getElementById('modalActivityDescription').innerText = description;
+                document.getElementById('activityModal').classList.remove('hidden');
+            }
+        }
+
+        function hideActivityDetail() {
+            document.getElementById('activityDetailPanel').classList.remove('active');
+            document.getElementById('activityModal').classList.add('hidden');
+        }
+    </script>
+
 </body>
 
 </html>
