--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <!-- Header -->
         <header class="bg-indigo-600 text-white py-4 shadow-md">
-            <div class="container mx-auto flex justify-center items-center px-4">
+            <div class="container mx-auto flex justify-left items-center px-4">
                 <h1 class="text-2xl font-bold">Activity Tracker</h1>
             </div>
         </header>
@@ -63,6 +63,18 @@
                 </li>
                 <li class="p-4 bg-white rounded-lg shadow cursor-pointer" onclick="showActivityDetail('Activity Title 3', 'This is the detailed information about Activity 3.')">
                     <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
+                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
+                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
+                </li>
+                <li class="p-4 bg-white rounded-lg shadow cursor-pointer" onclick="showActivityDetail('Activity Title 4', 'This is the detailed information about Activity 4.')">
+                    <h3 class="text-lg font-bold mb-2">Activity Title 4</h3>
+                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
+                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
+                </li>
+                <li class="p-4 bg-white rounded-lg shadow cursor-pointer" onclick="showActivityDetail('Activity Title 5', 'This is the detailed information about Activity 5.')">
+                    <h3 class="text-lg font-bold mb-2">Activity Title 5</h3>
                     <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
                     <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
