--- a/index.html
+++ b/index.html
@@ -1,134 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activity List</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        /* Custom CSS for full screen background image */
-        .background-image {
-            background-image: url('https://example.com/your-background-image.jpg');
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-            width: 100%;
-        }
-
-        /* Custom CSS for activity list container */
-        .activity-list {
-            backdrop-filter: blur(8px);
-            background-color: rgba(255, 255, 255, 0.8);
-        }
-
-        /* Custom CSS for right panel */
-        .activity-detail {
-            display: none;
-        }
-
-        .activity-detail.active {
-            display: block;
-        }
-    </style>
+    <title>Responsive Layout</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
-<body class="flex flex-col min-h-screen">
-
-    <!-- Background Image Container -->
-    <div class="background-image flex-grow relative">
-
-        <!-- Header -->
-        <header class="bg-indigo-600 text-white py-4 shadow-md">
-            <div class="container mx-auto flex justify-left items-center px-4">
-                <h1 class="text-2xl font-bold">Activity Tracker</h1>
-            </div>
-        </header>
-
-        <!-- Activity List -->
-        <div class="activity-list fixed top-0 right-0 w-full md:w-1/3 lg:w-1/4 h-full p-6 shadow-lg overflow-y-auto">
-            <h2 class="text-xl font-semibold mb-4 text-gray-900">Upcoming Activities</h2>
-            <ul class="space-y-4">
-                <li class="p-4 bg-white rounded-lg shadow cursor-pointer" onclick="showActivityDetail('Activity Title 1', 'This is the detailed information about Activity 1.')">
-                    <h3 class="text-lg font-bold mb-2">Activity Title 1</h3>
-                    <p class="text-sm text-gray-600 mb-2">Date: August 25, 2024</p>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="mt-2 text-sm text-gray-600">10 registered, 5 spots left</div>
+<body>
+    <div class="container">
+        <div class="left">
+            <h1>Information</h1>
+            <p>Here is some information about the content.</p>
+        </div>
+        <div class="right">
+            <h2>Activity List</h2>
+            <ul class="activity-list">
+                <li>
+                    <div class="activity-info">
+                        <h3>Activity 1</h3>
+                        <p class="details">Short description of Activity 1.</p>
+                        <p class="seats-info">Total Seats: 30 | Available Seats: 10</p>
+                        <button class="view-btn">View</button>
+                    </div>
                 </li>
-                <li class="p-4 bg-white rounded-lg shadow cursor-pointer" onclick="showActivityDetail('Activity Title 2', 'This is the detailed information about Activity 2.')">
-                    <h3 class="text-lg font-bold mb-2">Activity Title 2</h3>
-                    <p class="text-sm text-gray-600 mb-2">Date: September 1, 2024</p>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="mt-2 text-sm text-gray-600">5 registered, 10 spots left</div>
+                <li>
+                    <div class="activity-info">
+                        <h3>Activity 2</h3>
+                        <p class="details">Short description of Activity 2.</p>
+                        <p class="seats-info">Total Seats: 25 | Available Seats: 5</p>
+                        <button class="view-btn">View</button>
+                    </div>
                 </li>
-                <li class="p-4 bg-white rounded-lg shadow cursor-pointer" onclick="showActivityDetail('Activity Title 3', 'This is the detailed information about Activity 3.')">
-                    <h3 class="text-lg font-bold mb-2">Activity Title 3</h3>
-                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
+                <li>
+                    <div class="activity-info">
+                        <h3>Activity 1</h3>
+                        <p class="details">Short description of Activity 1.</p>
+                        <p class="seats-info">Total Seats: 30 | Available Seats: 10</p>
+                        <button class="view-btn">View</button>
+                    </div>
                 </li>
-                <li class="p-4 bg-white rounded-lg shadow cursor-pointer" onclick="showActivityDetail('Activity Title 4', 'This is the detailed information about Activity 4.')">
-                    <h3 class="text-lg font-bold mb-2">Activity Title 4</h3>
-                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
+                <li>
+                    <div class="activity-info">
+                        <h3>Activity 2</h3>
+                        <p class="details">Short description of Activity 2.</p>
+                        <p class="seats-info">Total Seats: 25 | Available Seats: 5</p>
+                        <button class="view-btn">View</button>
+                    </div>
                 </li>
-                <li class="p-4 bg-white rounded-lg shadow cursor-pointer" onclick="showActivityDetail('Activity Title 5', 'This is the detailed information about Activity 5.')">
-                    <h3 class="text-lg font-bold mb-2">Activity Title 5</h3>
-                    <p class="text-sm text-gray-600 mb-2">Date: September 10, 2024</p>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="mt-2 text-sm text-gray-600">15 registered, 0 spots left</div>
+                <li>
+                    <div class="activity-info">
+                        <h3>Activity 1</h3>
+                        <p class="details">Short description of Activity 1.</p>
+                        <p class="seats-info">Total Seats: 30 | Available Seats: 10</p>
+                        <button class="view-btn">View</button>
+                    </div>
+                </li>
+                <li>
+                    <div class="activity-info">
+                        <h3>Activity 2</h3>
+                        <p class="details">Short description of Activity 2.</p>
+                        <p class="seats-info">Total Seats: 25 | Available Seats: 5</p>
+                        <button class="view-btn">View</button>
+                    </div>
+                </li>
+                <li>
+                    <div class="activity-info">
+                        <h3>Activity 1</h3>
+                        <p class="details">Short description of Activity 1.</p>
+                        <p class="seats-info">Total Seats: 30 | Available Seats: 10</p>
+                        <button class="view-btn">View</button>
+                    </div>
+                </li>
+                <li>
+                    <div class="activity-info">
+                        <h3>Activity 2</h3>
+                        <p class="details">Short description of Activity 2.</p>
+                        <p class="seats-info">Total Seats: 25 | Available Seats: 5</p>
+                        <button class="view-btn">View</button>
+                    </div>
+                </li>
+                <li>
+                    <div class="activity-info">
+                        <h3>Activity 1</h3>
+                        <p class="details">Short description of Activity 1.</p>
+                        <p class="seats-info">Total Seats: 30 | Available Seats: 10</p>
+                        <button class="view-btn">View</button>
+                    </div>
+                </li>
+                <li>
+                    <div class="activity-info">
+                        <h3>Activity 2</h3>
+                        <p class="details">Short description of Activity 2.</p>
+                        <p class="seats-info">Total Seats: 25 | Available Seats: 5</p>
+                        <button class="view-btn">View</button>
+                    </div>
                 </li>
                 <!-- Add more activities as needed -->
             </ul>
         </div>
-
-        <!-- Activity Detail Panel -->
-        <div id="activityDetailPanel" class="activity-detail fixed top-0 right-0 w-full md:w-2/3 lg:w-3/4 h-full p-6 bg-white shadow-lg overflow-y-auto">
-            <h2 id="activityTitle" class="text-2xl font-bold mb-4 text-gray-900">Activity Title</h2>
-            <p id="activityDescription" class="text-gray-700">Activity description goes here.</p>
-            <button onclick="hideActivityDetail()" class="mt-6 px-4 py-2 text-white bg-red-600 rounded hover:bg-red-700 focus:outline-none">Close</button>
-        </div>
-
-        <!-- Footer -->
-        <footer class="bg-gray-800 text-white py-4 absolute bottom-0 w-full">
-            <div class="container mx-auto text-center">
-                <p>&copy; 2024 Activity Tracker. All rights reserved.</p>
-            </div>
-        </footer>
-
     </div>
-
-    <!-- Modal for Mobile View -->
-    <div id="activityModal" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50 hidden">
-        <div class="bg-white p-6 rounded-lg shadow-lg max-w-sm w-full">
-            <h2 id="modalActivityTitle" class="text-2xl font-bold mb-4 text-gray-900">Activity Title</h2>
-            <p id="modalActivityDescription" class="text-gray-700">Activity description goes here.</p>
-            <button onclick="hideActivityDetail()" class="mt-6 px-4 py-2 text-white bg-red-600 rounded hover:bg-red-700 focus:outline-none">Close</button>
-        </div>
-    </div>
-
-    <script>
-        function showActivityDetail(title, description) {
-            // For desktop view
-            if (window.innerWidth >= 768) {
-                document.getElementById('activityTitle').innerText = title;
-                document.getElementById('activityDescription').innerText = description;
-                document.getElementById('activityDetailPanel').classList.add('active');
-            } else {
-                // For mobile view
-                document.getElementById('modalActivityTitle').innerText = title;
-                document.getElementById('modalActivityDescription').innerText = description;
-                document.getElementById('activityModal').classList.remove('hidden');
-            }
-        }
-
-        function hideActivityDetail() {
-            document.getElementById('activityDetailPanel').classList.remove('active');
-            document.getElementById('activityModal').classList.add('hidden');
-        }
-    </script>
-
 </body>
-
 </html>
