--- a/index.html
+++ b/index.html
@@ -11,92 +11,74 @@
         <div class="left">
             <h1>Information</h1>
             <p>Here is some information about the content.</p>
+
         </div>
         <div class="right">
             <h2>Activity List</h2>
-            <ul class="activity-list">
-                <li>
-                    <div class="activity-info">
-                        <h3>Activity 1</h3>
-                        <p class="details">Short description of Activity 1.</p>
-                        <p class="seats-info">Total Seats: 30 | Available Seats: 10</p>
-                        <button class="view-btn">View</button>
-                    </div>
-                </li>
-                <li>
-                    <div class="activity-info">
-                        <h3>Activity 2</h3>
-                        <p class="details">Short description of Activity 2.</p>
-                        <p class="seats-info">Total Seats: 25 | Available Seats: 5</p>
-                        <button class="view-btn">View</button>
-                    </div>
-                </li>
-                <li>
-                    <div class="activity-info">
-                        <h3>Activity 1</h3>
-                        <p class="details">Short description of Activity 1.</p>
-                        <p class="seats-info">Total Seats: 30 | Available Seats: 10</p>
-                        <button class="view-btn">View</button>
-                    </div>
-                </li>
-                <li>
-                    <div class="activity-info">
-                        <h3>Activity 2</h3>
-                        <p class="details">Short description of Activity 2.</p>
-                        <p class="seats-info">Total Seats: 25 | Available Seats: 5</p>
-                        <button class="view-btn">View</button>
-                    </div>
-                </li>
-                <li>
-                    <div class="activity-info">
-                        <h3>Activity 1</h3>
-                        <p class="details">Short description of Activity 1.</p>
-                        <p class="seats-info">Total Seats: 30 | Available Seats: 10</p>
-                        <button class="view-btn">View</button>
-                    </div>
-                </li>
-                <li>
-                    <div class="activity-info">
-                        <h3>Activity 2</h3>
-                        <p class="details">Short description of Activity 2.</p>
-                        <p class="seats-info">Total Seats: 25 | Available Seats: 5</p>
-                        <button class="view-btn">View</button>
-                    </div>
-                </li>
-                <li>
-                    <div class="activity-info">
-                        <h3>Activity 1</h3>
-                        <p class="details">Short description of Activity 1.</p>
-                        <p class="seats-info">Total Seats: 30 | Available Seats: 10</p>
-                        <button class="view-btn">View</button>
-                    </div>
-                </li>
-                <li>
-                    <div class="activity-info">
-                        <h3>Activity 2</h3>
-                        <p class="details">Short description of Activity 2.</p>
-                        <p class="seats-info">Total Seats: 25 | Available Seats: 5</p>
-                        <button class="view-btn">View</button>
-                    </div>
-                </li>
-                <li>
-                    <div class="activity-info">
-                        <h3>Activity 1</h3>
-                        <p class="details">Short description of Activity 1.</p>
-                        <p class="seats-info">Total Seats: 30 | Available Seats: 10</p>
-                        <button class="view-btn">View</button>
-                    </div>
-                </li>
-                <li>
-                    <div class="activity-info">
-                        <h3>Activity 2</h3>
-                        <p class="details">Short description of Activity 2.</p>
-                        <p class="seats-info">Total Seats: 25 | Available Seats: 5</p>
-                        <button class="view-btn">View</button>
-                    </div>
-                </li>
-                <!-- Add more activities as needed -->
-            </ul>
+            <div class="activity-list-div">
+              <ul class="activity-list">
+                  <li>
+                      <div class="activity-info">
+                          <h3>Activity 1</h3>
+                          <p class="details">Short description of Activity 1.</p>
+                          <p class="seats-info">Total Seats: 30 | Available Seats: 10</p>
+                          <button class="view-btn">View</button>
+                      </div>
+                  </li>
+                  <li>
+                      <div class="activity-info">
+                          <h3>Activity 2</h3>
+                          <p class="details">Short description of Activity 2.</p>
+                          <p class="seats-info">Total Seats: 25 | Available Seats: 5</p>
+                          <button class="view-btn">View</button>
+                      </div>
+                  </li>
+                  <li>
+                      <div class="activity-info">
+                          <h3>Activity 1</h3>
+                          <p class="details">Short description of Activity 1.</p>
+                          <p class="seats-info">Total Seats: 30 | Available Seats: 10</p>
+                          <button class="view-btn">View</button>
+                      </div>
+                  </li>
+                  <li>
+                      <div class="activity-info">
+                          <h3>Activity 2</h3>
+                          <p class="details">Short description of Activity 2.</p>
+                          <p class="seats-info">Total Seats: 25 | Available Seats: 5</p>
+                          <button class="view-btn">View</button>
+                      </div>
+                  </li>
+                  <li>
+                      <div class="activity-info">
+                          <h3>Activity 1</h3>
+                          <p class="details">Short description of Activity 1.</p>
+                          <p class="seats-info">Total Seats: 30 | Available Seats: 10</p>
+                          <button class="view-btn">View</button>
+                      </div>
+                  </li>
+                  <li>
+                      <div class="activity-info">
+                          <h3>Activity 2</h3>
+                          <p class="details">Short description of Activity 2.</p>
+                          <p class="seats-info">Total Seats: 25 | Available Seats: 5</p>
+                          <button class="view-btn">View</button>
+                      </div>
+                  </li>
+                  <li>
+                      <div class="activity-info">
+                          <h3>Activity 1</h3>
+                          <p class="details">Short description of Activity 1.</p>
+                          <p class="seats-info">Total Seats: 30 | Available Seats: 10</p>
+                          <button class="view-btn">View</button>
+                      </div>
+                  </li>
+
+
+                  <!-- Add more activities as needed -->
+              </ul>
+            </div>
+
         </div>
     </div>
 </body>
