--- a/index.html
+++ b/index.html
@@ -98,6 +98,16 @@
                     title: 'Activity 2',
                     description: 'Detailed information about Activity 2.',
                     seatsInfo: 'Total Seats: 25 | Available Seats: 5'
+                },
+                3: {
+                    title: 'Activity 3',
+                    description: 'Detailed information about Activity 3.',
+                    seatsInfo: 'Total Seats: 25 | Available Seats: 5'
+                },
+                4: {
+                    title: 'Activity 4',
+                    description: 'Detailed information about Activity 4.',
+                    seatsInfo: 'Total Seats: 25 | Available Seats: 5'
                 }
                 // Add more activities as needed
             };
