--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
                 <form class="info-form">
                     <fieldset>
                         <legend>Personal Information</legend>
-                        <label for="first-name">First Name:</label>
-                        <input type="text" id="first-name" name="first-name" required>
-                        <br>
-                        <label for="last-name">Last Name:</label>
-                        <input type="text" id="last-name" name="last-name" required>
-                        <br>
-                        <label for="phone-number">Phone Number:</label>
-                        <input type="tel" id="phone-number" name="phone-number" required>
-                    </fieldset>
+                        <label for="first-name">First Name:</label><br>
+                        <input type="text" id="first-name" name="first-name" required><br>
 
+                        <label for="last-name">Last Name:</label><br>
+                        <input type="text" id="last-name" name="last-name" required><br>
+
+                        <label for="phone-number">Phone Number:</label><br>
+                        <input type="tel" id="phone-number" name="phone-number" required><br>
+                    </fieldset>
                     <button type="submit">Submit</button>
                 </form>
             </div>
