--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
                    <p>
                        เพื่อให้คุณได้สัมผัสประสบการณ์ที่ดีที่สุด กรุณากรอกข้อมูลเบื้องต้นของคุณด้านล่าง แล้วคุณจะสามารถเลือกและเข้าร่วมกิจกรรมที่สนใจได้ทันที
                    </p>
-                   <button class="btn">ลงชื่อเข้าใช้</button>
+                   <div class="button-container">
+                       <button class="login-button">เข้าสู่ระบบ</button>
+                       <button class="register-button">สมัครสมาชิก</button>
+                   </div>
+                   <!-- <button class="btn">เริ่มเลย</button> -->
                    <!-- <form>
                        <div class="form-group">
                            <input type="text" placeholder="ชื่อ" required>
