--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
                    </div>
                </div>
                <div class="button-container">
+                 <div class="item">
                    <button class="login-button" id="open-login-modal">เข้าสู่ระบบ</button>
+                 </div>
+                 <div class="item">
                    <button class="register-button" id="open-register-modal">สมัครสมาชิก</button>
+                 </div> 
                </div>
             </div>
         </div>
